--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "reset": "node ./bin/reset"
   },
   "dependencies": {
-    "body-parser": "~1.16.0",
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.0",
-    "express": "~4.14.1",
+    "debug": "^4.1.0",
+    "ejs": "~1.0",
+    "express": "^4.16.4",
     "jade": "~1.11.0",
-    "mongoose": "^4.9.0",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2",
-    "ejs": "~1.0"
+    "mongoose": "^5.3.12",
+    "morgan": "^1.9.1",
+    "serve-favicon": "^2.5.0"
   }
 }
