--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "~1.0",
     "express": "^4.16.4",
     "jade": "~1.11.0",
+    "mobile-detect": "^1.4.3",
     "mongoose": "^5.3.12",
     "morgan": "^1.9.1",
     "serve-favicon": "^2.5.0"
