--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "debug": "^4.1.0",
     "ejs": "~1.0",
     "express": "^4.16.4",
+    "fs": "0.0.1-security",
     "jade": "~1.11.0",
     "mobile-detect": "^1.4.3",
     "mongoose": "^5.3.12",
     "morgan": "^1.9.1",
-    "serve-favicon": "^2.5.0"
+    "qr-image": "^3.2.0",
+    "serve-favicon": "^2.5.0",
+    "url-join": "^4.0.0"
   }
 }
