--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.3.12",
     "morgan": "^1.9.1",
     "qr-image": "^3.2.0",
+    "seedrandom": "^2.4.4",
     "serve-favicon": "^2.5.0",
     "url-join": "^4.0.0"
   },
