--- a/public/.eslintrc.json
+++ b/public/.eslintrc.json
@@ -5,7 +5,7 @@
       "node": false
   },
   "globals": {
-      "$": "readable"
+      "$": "readonly"
   },
   "parserOptions": {
       "ecmaVersion": 2015
