--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "popper.js": "^1.14.7",
     "qr-image": "^3.2.0",
     "qrcode-generator": "^1.4.3",
+    "random-words": "^1.1.0",
     "seedrandom": "^2.4.4",
     "serve-favicon": "^2.5.0",
     "url-join": "^4.0.0",
