--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
+    "recursive-readdir": "^2.2.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "stylelint": "^9.10.1",
