--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fs": "0.0.1-security",
     "jade": "~1.11.0",
     "jquery": "^3.3.1",
+    "js-cookie": "^2.2.0",
     "jsonform": "^2.1.3",
     "mobile-detect": "^1.4.3",
     "mongoose": "^5.3.12",
@@ -74,7 +75,7 @@
   "browserslist": [
     "since 2011"
   ],
-  "engines" : {
-    "node" : ">=10.0.0"
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
