--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "stylelint": "stylelint frontend"
   },
   "dependencies": {
+    "acorn": "^6.1.1",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
@@ -18,8 +19,7 @@
     "ejs": "~1.0",
     "express": "^4.16.4",
     "fs": "0.0.1-security",
-    "jade": "~1.11.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "js-cookie": "^2.2.0",
     "jsonform": "^2.1.3",
     "mobile-detect": "^1.4.3",
@@ -54,7 +54,7 @@
     "image-size": "^0.7.2",
     "lodash.camelcase": "^4.3.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
