--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "^4.1.1",
     "express": "^4.16.4",
+    "forever": "^1.0.0",
     "fs": "0.0.1-security",
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.0",
